--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -1,2 +1,1 @@
-&copy;2025 ⛺ Odusile Olufemi⛺ BYU-Idaho for BYU-Pathway Worldwide
-Online
+&copy;2025 ⛺ Odusile Olufemi⛺ BYU-Idaho for BYU-Pathway Worldwide Online
